examples/test/testpolicy12069.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12069
  namespace: namespace451
spec:
  podSelector:
    matchLabels:
      key2: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value11
          key35: value25
          key2: value14
      podSelector:
        matchLabels:
          key8: value20
          key2: value13
          key12: value27
